--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "^4.19.2",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "reactjs-popup": "^2.0.6"
   },
   "engines": {
     "node": ">=18"
