--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   },
   "engines": {
     "node": ">=18"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.5"
   }
 }
